# infotecs-internship

./: .README.md.swo  .README.md.swp  .gitignore  CMakeLists.txt  README.md
lib/: CMakeCache.txt.prev  CMakeLists.txt  cmake_install.cmake  lib  lib.cpp  lib.h  main.cpp
lib/.cmake/api/v1/reply/: cache-v2-aba34f00222fe9dcddc9.json  cmakeFiles-v1-c3170d6f0977f76e0002.json  cmakeFiles-v1-c9f5083bde3f4e6afa10.json  index-2025-02-07T16-55-40-0291.json
lib/.cmake/api/v1/reply.prev/: cache-v2-3a59f47a7e156ef48915.json  codemodel-v2-9639e77ecb0b3a7f73be.json  directory-.-Debug-1e2216d4379066643429.json  index-2025-02-07T10-13-28-0689.json  target-lib-Debug-37b7053338f12bba0ed6.json
program-1/: CMakeLists.txt  client.cpp  client.h  container.h  dispatcher.cpp  dispatcher.h  iclient.h  idispatcher.h  main.cpp  recipient.cpp  recipient.h
program-2/: CMakeLists.txt  main.cpp  server.cpp  server.h
